--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "mongoose-slug-plugin": "^2.1.0"
   },
   "scripts": {
     "start": "nodemon app.js"
