--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "Alkandari-Y <yayalkandari@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "mongoose-slug-plugin": "^2.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.3"
   },
   "scripts": {
     "start": "nodemon app.js"
